# personal_page

./: .gitignore  README.md  SECURITY_HARDENING_SUMMARY.md  package-lock.json
backend/: README.md  pyproject.toml
backend/app/: main.py  models.py
backend/data/: cv.csv  cv.json  evangelist.json  info_points.json  profile.json  projects.json  technologies.json
frontend/: index.html  package-lock.json  package.json  playwright.config.js
frontend/src/: App.vue  main.js  router.js  styles.css
frontend/src/composables/: useApi.js  useParticles.js  useTimeline.js
frontend/src/pages/: ContactView.vue  CvView.vue  EvangelistView.vue  ProjectsView.vue  WelcomeView.vue
frontend/src/styles/: base.css  cards.css  index.css  navigation.css  responsive.css  timeline.css  transitions.css  variables.css  welcome.css
frontend/test-results/: .last-run.json
frontend/tests/e2e/: baseline.spec.js
