[tool.poetry]
name = "personal-page-api"
version = "0.1.0"
description = "Backend API for personal webpage"
authors = ["Artur Gorczyński <hello@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.112.2"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
python-multipart = "^0.0.21"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
